--- a/.eslintrc
+++ b/.eslintrc
@@ -9,17 +9,12 @@
     "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
-  "overrides": [
-  ],
+  "overrides": [],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": [
-    "react",
-    "@typescript-eslint"
-  ],
-  "rules": {
-  }
+  "plugins": ["react", "@typescript-eslint"],
+  "rules": {}
 }
