--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "expressway-commute-portal-vite",
+  "name": "expressway-commute-portal",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "antd": "^5.1.6",
+    "dayjs": "^1.11.7",
     "firebase": "^9.16.0",
+    "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
+    "luxon": "^3.2.1",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "sort-by": "^1.2.0",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.2.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
