--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,7 @@
 {
   "hosting": {
     "public": "dist",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
       {
         "source": "**",
@@ -15,10 +11,12 @@
     "headers": [
       {
         "source": "**",
-        "headers": [{
-          "key": "Cache-Control",
+        "headers": [
+          {
+            "key": "Cache-Control",
             "value": "public, no-cache"
-        }]
+          }
+        ]
       }
     ]
   }
