--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "useUnknownInCatchVariables": false,
+    "types": ["vite-plugin-pwa/client"]
   },
   "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "references": [{"path": "./tsconfig.node.json"}]
 }
